chap12/istiospec/advance-route/virtualService-routing.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cncamp-istio-canary
spec:
  hosts:
    - cncamp.default.svc.cluster.local
  http:
    - match:
        - headers:
            user:
              exact: cncamp
      route:
        - destination:
            host: cncamp.default.svc.cluster.local
            subset: v2
            port:
              number: 80
    - route:
        - destination:
            host: cncamp.default.svc.cluster.local
            subset: v1
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: canary
spec:
  host: cncamp.default.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: DISABLE
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
